# module-6-Umartsaqib

./: .coverage  README.md  pyproject.toml
app/: __init__.py
app/models/: animals.py  employees.py
app/route/: animals_route.py  employees_route.py
migrations/versions/: 1271051b4d66_add_employees_table.py  7c9c5e826da0_add_animals_table.py
tests/: conftest.py
tests/route/: test_animals_route.py  test_employees_route.py
